samples/tester/arrays/reassign_undecl.flx
var test[10];

// print(test); // error undefined
// print('\n');

//test = { 4, 3, 2, 1, 0 }; // error
//test = { { 0, 0, 0 }, { 0, 0, 0 }, { 0, 0, 0 } }; // error
test = { 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 };

print(test);
print('\n');
